Abstract and Fix Typos

--- a/doc/portada/portada.tex
+++ b/doc/portada/portada.tex
@@ -12,9 +12,9 @@
 \textsc{ \Large TRABAJO FIN DE GRADO\\[0.2cm]}
 \textsc{ GRADO EN INGENIERIA INFORMATICA}\\[1cm]
 
-{\Huge\bfseries Godea. Go Decentralized Evolutionary Algorithm  \\}
+{\Huge\bfseries Gocey. Distributed Evolutionary Algorithms on Ephemeral Infrastructure  \\}
 \noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
-{\large\bfseries Collaborative science Go library to running evolutionary algorithms on ephemeral infrastructure}
+{\large\bfseries A Go library to run decentralized evolutionary algorithms powered by a peer-to-peer collaborative science network}
 \end{minipage}
 
 \vspace{2.5cm}
