--- a/doc/secciones/02_descripcion.tex
+++ b/doc/secciones/02_descripcion.tex
@@ -1,6 +1,6 @@
 \chapter{Problem description}
 
-In this chapter we will discuss the necessity of a tool like Godea, followed by a brief overview of the concepts involved on this project.
+In this chapter we will discuss the necessity of a tool like Gocey, followed by a brief overview of the concepts involved on this project.
 
 \section{The necessity of a distributed system for collaborative science}
 Nowadays, computers play an essential role in scientific research. For most scientists, a desktop machine is enough to store and process the data they work with, but a considerable amount of them need supercomputers to be able to deal with more complex problems \cite{computing-in-science}.
