change figure name

--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -25,7 +25,7 @@ A list of the most important concepts from GitHub and ZenHub that we will use in
 
 \begin{figure}[h!]
 		\centering
-    	\includegraphics[width=\linewidth]{assets/images/epic.png}
+    	\includegraphics[width=\linewidth]{assets/images/Epic.png}
     	\caption{Example of an Epic about this document.}
     	\label{fig:epic}
 \end{figure}
