Project Budgect and Development Cost

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -702,5 +702,30 @@ month={June},}
 	howpublished = {\url{https://prometheus.io/docs/prometheus/latest/querying/basics/}}
 }
 
+@misc{payscale,
+	title        = {Average Junior Software Engineer Salary in Spain},
+	howpublished = {\url{https://www.payscale.com/research/ES/Job=Junior_Software_Engineer/Salary}}
+}
+
+@misc{git-hours,
+	title        = {Git hours},
+	howpublished = {\url{https://github.com/kimmobrunfeldt/git-hours}}
+}
+
+@misc{gcp-calculator,
+	title        = {Google Cloud Platform Pricing Calculator},
+	howpublished = {\url{https://cloud.google.com/products/calculator/}}
+}
+
+@misc{aws-calculator,
+	title        = {AWS Pricing calculator},
+	howpublished = {\url{https://calculator.aws/#/createCalculator}}
+}
+
+@misc{azure-calculator,
+	title        = {Azure Pricing calculator},
+	howpublished = {\url{https://azure.microsoft.com/en-in/pricing/calculator/}}
+}
+
 
 
