--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -121,9 +121,12 @@
 
 	% Resultados
 	\input{secciones/07_results}
+	
+	% Presupuesto
+	\input{secciones/08_presupuesto}
 
 	% Conclusiones y Trabajos futuros
-	\input{secciones/08_conclusiones}
+	\input{secciones/09_conclusiones}
 
 	
 	\newpage
