--- a/doc/secciones/09_conclusiones.tex
+++ b/doc/secciones/09_conclusiones.tex
@@ -22,4 +22,4 @@ The user experience for browser-based collaborators can be further improved. Whi
 
 As stated in the previous chapter, to increase the chances of new users using our platform, it could be interesting to have a catalog where researchers can share their clusters and where collaborators can look for problems they might be willing to collaborate to.
 
-All in all, this work was not only a research project but also a great opportunity to work on distributed systems and artificial intelligence; two of the fields of Computer Science that inspire me the most. Furthermore, it was also an opportunity to work with really talented people, and to apply many of my engineering capabilities acquired in these four years at University and developing my side-projects.
+All in all, this work was not only a engineering project but also a great opportunity to work on distributed systems and artificial intelligence; two of the fields of Computer Science that inspire me the most. Furthermore, it was also an opportunity to work with really talented people, and to apply the knowledge acquired in these four years at University and developing my side-projects.
